tests/machine/x/c/in_operator_extended.error
line: 0
error: cc error: exit status 1
/workspace/mochi/tests/machine/x/c/in_operator_extended.c: In function ‘main’:
/workspace/mochi/tests/machine/x/c/in_operator_extended.c:88:26: warning: passing argument 2 of ‘map_int_bool_put’ makes integer from pointer without a cast [-Wint-conversion]
   88 |   map_int_bool_put(&_t5, "a", 1);
      |                          ^~~
      |                          |
      |                          char *
/workspace/mochi/tests/machine/x/c/in_operator_extended.c:39:51: note: expected ‘int’ but argument is of type ‘char *’
   39 | static void map_int_bool_put(map_int_bool *m, int key, int value) {
      |                                               ~~~~^~~
/workspace/mochi/tests/machine/x/c/in_operator_extended.c:89:11: error: incompatible types when initializing type ‘int’ using type ‘map_int_bool’
   89 |   int m = _t5;
      |           ^~~
/workspace/mochi/tests/machine/x/c/in_operator_extended.c:90:22: error: expected ‘)’ before ‘in’
   90 |   printf("%d\n", ("a" in m));
      |                  ~   ^~~
      |                      )
/workspace/mochi/tests/machine/x/c/in_operator_extended.c:90:12: warning: format ‘%d’ expects argument of type ‘int’, but argument 2 has type ‘char *’ [-Wformat=]
   90 |   printf("%d\n", ("a" in m));
      |           ~^     ~~~~~~~
      |            |     |
      |            int   char *
      |           %s
/workspace/mochi/tests/machine/x/c/in_operator_extended.c:91:22: error: expected ‘)’ before ‘in’
   91 |   printf("%d\n", ("b" in m));
      |                  ~   ^~~
      |                      )
/workspace/mochi/tests/machine/x/c/in_operator_extended.c:91:12: warning: format ‘%d’ expects argument of type ‘int’, but argument 2 has type ‘char *’ [-Wformat=]
   91 |   printf("%d\n", ("b" in m));
      |           ~^     ~~~~~~~
      |            |     |
      |            int   char *
      |           %s

   1: #include <stdio.h>
